--- a/package.json
+++ b/package.json
@@ -15,16 +15,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxtjs/markdownit": "^1.2.10",
+    "@nuxtjs/style-resources": "^1.0.0",
     "@storefront-ui/vue": "0.9.2",
     "@vue-storefront/commercetools": "0.2.6",
     "@vue-storefront/nuxt": "0.0.12",
     "@vue-storefront/nuxt-theme": "0.0.6",
-    "@nuxtjs/style-resources": "^1.0.0",
     "cookie-universal-nuxt": "^2.1.3",
     "core-js": "^2.6.5",
     "nuxt": "^2.13.3",
     "nuxt-i18n": "^6.5.0",
     "vee-validate": "^3.2.3",
+    "vsf-lexascms": "^0.2.1",
     "vue-scrollto": "^2.17.1"
   },
   "devDependencies": {
